[build-system]
requires = [
    "setuptools>=68",
]
build-backend = "setuptools.build_meta"

[project]
name = "OctoPrint-Octodash"
version = "3.0.0"
description = "TODO"
authors = [
    { name = "Hilton Shumway", email = "hillshum@gmail.com" },
]
requires-python = ">=3,<4"
dependencies = []
dynamic = [
    "license",
]

[project.entry-points."octoprint.plugin"]
octodash = "octoprint_octodash"

[project.urls]
Homepage = "https://github.com/UnchartedBull/OctoDash"

[project.optional-dependencies]
develop = [
    "go-task-bin",
]

[project.readme]
file = "README.md"
content-type = "text/markdown"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = [
    "octoprint_octodash",
    "octoprint_octodash.*",
]

[tool.setuptools.cmdclass]
    build_py = "octoprint_octodash.distutils_commands.NpmBuild"